compiler/tests/en/errors/ternary_mismatch.salam
// EXPECT: E021
func main:
    y := true ? 2 : "s"
    println y
end
